fix: view icon hidden on mobile

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -20,9 +20,5 @@
 
   .icon {
     margin-right: 2px;
-
-    @media @phone {
-      display: none;
-    }
   }
 }
